--- a/LTC_DIR/Week_1/1550.存在连续三个奇数的数组.md
+++ b/LTC_DIR/Week_1/1550.存在连续三个奇数的数组.md
@@ -1,1 +1,30 @@
+# 1550.存在连续三个奇数的数组
+### 题目描述
+给你一个整数数组`arr`，请你判断数组中是否存在连续三个元素都是奇数的情况：如果存在，请返回`true`；否则，返回`false`。
 
+示例 1：<br/>
+输入：arr = [2,6,4,1]<br/>
+输出：false<br/>
+解释：不存在连续三个元素都是奇数的情况。
+
+示例 2：<br/>
+输入：arr = [1,2,34,3,4,5,7,23,12]<br/>
+输出：true<br/>
+解释：存在连续三个元素都是奇数的情况，即 [5,7,23] 。<br/>
+
+输入限制：
+- 1 <= arr.length <= 1000
+- 1 <= arr[i] <= 1000
+
+### 解题思路
+1. 枚举法，一个一个判断
+2. 使用any()方法
+
+### Python语法
+1. any()
+The any() function returns True if any item in an iterable are true, otherwise it returns False. If the iterable object is empty, the any() function will return False.<br/>
+Syntax: any(iterable)<br/>
+2. & 1
+bitwise operator, 可用于判断奇偶。如果x & 1 = 0，则x是偶数；如果x & 1 = 1，则x是奇数。
+4 & 1 = 100 & 001 = 000 = 0
+3 & 1 = 011 & 001 = 001 = 1
