--- a/LTC_DIR/Week_1/539. 最小时间差.md
+++ b/LTC_DIR/Week_1/539. 最小时间差.md
@@ -1,1 +1,26 @@
+# 539. 最小时间差
+### 题目描述
+给定一个 24 小时制（小时:分钟 "HH:MM"）的时间列表，找出列表中任意两个时间的最小时间差并以分钟数表示。
 
+示例 1：<br/>
+输入：timePoints = ["23:59","00:00"]<br/>
+输出：1<br/>
+
+示例 2：<br/>
+输入：timePoints = ["00:00","23:59","00:00"]<br/>
+输出：0<br/>
+ 
+输入限制：
+2 <= timePoints.length <= 2 * 104<br/>
+timePoints[i] 格式为 "HH:MM"
+
+### 解题思路
+1. 计算最小时间差，应该是排序后的俩俩相邻差值的最小值。
+2. 注意“00:00”可以是"00:00"或"24:00"，那么也就是首尾的时间差也有可能是最小值。
+3. 要进行计算，首先把"HH:MM"转换为可计算的整数模式，计算成以分钟为单位的整数，那么一天中的最大时间是1440
+4. 排序后两两求差值，最后再计算一下首尾`timePoints[0] + 1440 - timePoints[-1]`，然后取最小。
+
+### Python语法
+1. split()的用法<br/>
+The split() method splits a string into a list. You can specify the separator, default separator is any whitespace.<br/>
+Syntax: string.split(separator, maxsplit)
